	in /var/snd
2015-04-26 Brian McGlynn <brian.mcglynn@geneseemedia.net>
        * Added "Group By" statement in 'rdlibrary/rdlibrary.cpp' to allow a
 	full 100 results to be shown
2015-04-26 Brian McGlynn <brian.mcglynn@geneseemedia.net>
  	* Refactored RDLogEditor code to improve performance when
  	saving and updating logs.  (from albanpeigner pull request #42)
	* Created modification pointer in voicetracker for better performance
	over WAN networks
2016-04-26 Brian McGlynn <brian.mcglynn@geneseemedia.net>
	* Updated Cart Scheduler to favor weighted playback for cuts expiring
	first following the number of plays
2016-04-27 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'bitRate' field in the return for the AudioInfo web method.
	* Added an rdexport(1) utility in 'utils/rdexport/'.
2016-04-27 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'lib/rdcut.cpp' that caused the cut 'Description'
	field to be applied as a cut Title.
2016-04-29 Fred Gleason <fredg@paravelsystems.com>
	* Implemented export for marker data in WAV files in
	'lib/rdwavefile.cpp' and 'lib/rdwavefile.h'.
2016-04-29 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a regression in 'rdlibrary/audio_cart.cpp' that caused
	marker data to be deleted when exporting a cut.
2016-04-29 Fred Gleason <fredg@paravelsystems.com>
	* Added a pointer offset argument to the 'RDWaveFile::createWave()'
	method in 'lib/rdwavefile.cpp' and 'lib/rdwavefile.h'.
2016-04-29 Fred Gleason <fredg@paravelsystems.com>
	* Fixed bugs in 'docs/docbook/Makefile.am' and 'rivendell.spec.in'
	that broke the 'make rpm' target.
2016-04-29 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'lib/lib.pro' that broke the build on Windows.
2016-04-29 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 2.12.0int01.
2016-05-10 Fred Gleason <fredg@paravelsystems.com>
	* Updated 'NEWS'
	* Incremented the package version to 2.13.0.