@@ -15126,3 +15126,7 @@
 2016-05-10 Fred Gleason <fredg@paravelsystems.com>
 	* Updated 'NEWS'
 	* Incremented the package version to 2.13.0.
+2016-07-26 Fred Gleason <fredg@paravelsystems.com>
+	* Added a sanity check in the 'RDCut::setMetadata()' method in
+	'lib/rdcut.cpp' to ensure that the 'Description' field is
+	always populated.
